# INF8601

./: CMakeLists.txt  README-specs.asc  README.asc  README.html  Transformee DCT et quantification.ipynb  dev-env  handout
data/: check.sh  fetch.sh  generate-random
include/: image.h  matchers.hpp  pipeline.h  queue.h
matcher/: main.cpp  matchers.cpp
source/: .nfs0000000003122e0d00000022  CMakeCache.txt  Makefile  cmake_install.cmake  image.c  main.c  pipeline  pipeline-notbb  pipeline-pthread.c  pipeline-serial.c  pipeline-tbb.cpp  queue.c
